# flittermouse

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
data/flittermouse/: flittermouse.asset  flittermouse.pack
data/flittermouse/laser/: laser.assets
data/flittermouse/lightning/: lightning.assets
data/flittermouse/player/: magnet.object  muzzle.object  player.assets  player.pack  positions.ini  positions.py  ship.asset  ship.assets  ship.blend  ship.cpm  ship.mtl  ship.object  sign.cpm  tower.object
data/flittermouse/player/ship/: habitable.object  nozzleFlame.object  ship.asset  ship.object  ship.pack
data/flittermouse/player/weapons/: machinegun_bullet.object  machinegun_cannon.object  weapons.asset  weapons.mtl
data/flittermouse/player_old/ship/: ship.asset  ship.blend  ship.mtl  ship.obj_nozzleFlame.cpm
data/flittermouse/player_old/weapons/: laser.obj_DefaultMaterial.cpm  laser.object  machinegun_base.object  weapons.blend  weapons.pack
data/flittermouse/skybox/: skybox.asset  skybox.obj_DefaultMaterial.cpm
sources/: collision.cpp  common.h  doodads.cpp  gui.cpp  main.cpp  player.cpp  terrain.h  terrainGenerator.cpp  terrainTiles.cpp  timeout.cpp
sources/terrain/: generator.cpp  hierarchy.cpp  imageInpaint.cpp  inpaint.cpp  position.cpp  procedural.cpp  terrain.h  textureData.cpp  tiles.cpp  trianglePackerImpl.cpp
